--- a/open-weather-map/configs/currency_config.json
+++ b/open-weather-map/configs/currency_config.json
@@ -5,5 +5,13 @@
     "export_files": {
         "json": "./export/currency.json",
         "yaml": "./export/currency.yaml"
+    },
+    "db": {
+        "engine": "sqlite:///./export/currency.db",
+        "stmt": {
+            "drop_table": "DROP TABLE IF EXISTS Currency;",
+            "create_table": "CREATE TABLE Currency (id INTEGER PRIMARY KEY AUTOINCREMENT, base VARCHAR(5), currency_code VARCHAR(5), currency DECIMAL(10,2), vs_currency DECIMAL(10,2));",
+            "insert": "INSERT INTO Currency (base, currency_code, currency, vs_currency) VALUES (:base, :currency_code, :currency, :vs_currency)"
+        } 
     }
 }
