--- a/open-weather-map/export/currency.yaml
+++ b/open-weather-map/export/currency.yaml
@@ -1,4 +1,8 @@
-- EUR_USD: 1.1
-  USD_EUR: 0.91
-- EUR_UAH: 45.46
-  UAH_EUR: 0.02
+- base: EUR
+  currency: 1.1
+  currency_code: USD
+  vs_currency: 0.91
+- base: EUR
+  currency: 45.45
+  currency_code: UAH
+  vs_currency: 0.02
