--- a/open-weather-map/export/myweather.yaml
+++ b/open-weather-map/export/myweather.yaml
@@ -1,20 +1,20 @@
 - city: Berlin
   description_de: Klarer Himmel
   description_en: clear sky
-  humidity: 76
-  temperature_C: 12.44
+  humidity: 78
+  temperature_C: 11.44
 - city: Stuttgart
-  description_de: Leichter Regen
-  description_en: light rain
+  description_de: Klarer Himmel
+  description_en: clear sky
   humidity: 90
-  temperature_C: 10.06
+  temperature_C: 9.63
 - city: Aachen
-  description_de: Leichter Regen
-  description_en: light rain
-  humidity: 86
-  temperature_C: 8.62
+  description_de: "M\xE4\xDFig bew\xF6lkt"
+  description_en: scattered clouds
+  humidity: 84
+  temperature_C: 8.27
 - city: Halle (Saale)
   description_de: Klarer Himmel
   description_en: clear sky
-  humidity: 72
-  temperature_C: 10.96
+  humidity: 70
+  temperature_C: 10.35
